# HIghlighterToo_Unnamed10110

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_advanced.bat  build_debug_silent.bat  main.cpp
config/: CMakeConfig.cmake  ScreenHighlighter.ini.in  admin_manifest.manifest.in
